# bouquet

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml  wheels.yml
bouquet/: __init__.py  __main__.py  _version.py
bouquet/gradients/: __init__.py  base.py  bilinear.py  conical.py  linear.py  radial.py
bouquet/uix/: listview.py
docs/: api.rst  conf.py  examples.rst  gradients.rst  index.rst  requirements.txt
lupinus/: _version.py
tests/: test_gradients.py
